--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server":"nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +19,7 @@
     "mongoose": "^8.16.5",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
-    "stripe": "^18.3.0",
+    "stripe": "^18.3.0", 
     "validator": "^13.15.15"
   }
 }
